--- a/src/tail.html
+++ b/src/tail.html
@@ -9,7 +9,7 @@
 </head>
 
 <body class=" mx-auto bg-gray-900 md:w-full md:mx-0 ">
-    <div class="absolute z-30 w-[328px] h-[100vh] -top-full duration-700 left-3" id="menuList">
+    <div class="absolute z-30 w-[328px] h-[100vh] -top-full duration-700 left-3 md:hidden" id="menuList">
         <div class="text-white text-center bg-slate-700  rounded-lg ">
             
             <div class="grid grid-cols-1 divide-y-4">
