--- a/src/tail.html
+++ b/src/tail.html
@@ -9,13 +9,12 @@
 </head>
 
 <body class=" mx-auto bg-gray-900 md:w-full md:mx-0 ">
-    <div class="absolute z-30 w-[328px] h-[100vh] -top-full duration-700 left-3 md:hidden" id="menuList">
+    <div class="absolute z-30 w-full  -top-full duration-700  md:hidden" id="menuList">
         <div class="text-white text-center bg-slate-700  rounded-lg ">
-            
             <div class="grid grid-cols-1 divide-y-4">
-                <div class="p-4">
-                    <div class="w-8 h-8 text-white text-center cursor-pointer text-6xl float-right rounded-full hover:bg-slate-600" id="closeMenuList">
-                        &times
+                <div class="p-4 border-none">
+                    <div class="w-8 h-8 text-white  cursor-pointer text-6xl float-right rounded-full hover:bg-slate-600" id="closeMenuList">
+                        <p class="text-center">&times</p>
                     </div>
                 </div>
                 <a class="p-4" href="#">Pricing</a>
